--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "gatsby": "^3.10.2",
+    "gatsby-source-strapi": "^1.0.2",
+    "pg": "^8.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
