--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Proster energy",
+  "name": "proster-energy",
   "private": true,
-  "description": "Proster energy site",
+  "description": "A simplified bare-bones starter for Gatsby",
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
